# gala-cpotential-demo

./: .gitignore  .travis.yml  README.md  README.rst  setup-travis.sh  setup.cfg  setup.py
.github/workflows/: tests.yml  windows-tests.yml
potentialdemo/: cpotential.pyx
potentialdemo/src/: cpotential.h  potential.c
tests/: test_simple.py
