[metadata]
name = potentialdemo
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = Demonstrate defining new Gala potentials in C
long_description = file: README.rst
license = MIT
license_file = LICENSE
url = https://github.com/adrn/gala-cpotential-demo
edit_on_github = False
github_project = adrn/gala-cpotential-demo
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
install_requires =
    gala
    numpy
python_requires = >=3.7
setup_requires =
    setuptools_scm
    extension-helpers

[options.package_data]
* = *.c
potentialdemo = src/*.h, src/*.c

[tool:pytest]
testpaths = "potentialdemo"
astropy_header = true
